--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Moul&display=swap');
+
+.title-font {
+  font-family: 'Moul', cursive !important;
+}
+
 .App {
   text-align: center;
 }
