--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,6 +34,12 @@
   color: #61dafb;
 }
 
+@media only screen and (max-width: 768px) {
+  .hide-on-mobile {
+    display: none;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
