--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -1,7 +1,6 @@
 @media only screen and (max-width: 768px) {
     .column {
-        width: 100%;
-        background-color: #E3F2DD;
-        background-position: "center";
+        width: 80%;
+        align-items: center;
     }
 }
