--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -9,7 +9,6 @@
 
 @media only screen and (max-width: 768px) {
     .column {
-        width: 80%;
-        align-items: center;
+        width: 100vw;
     }
 }
