--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -4,8 +4,12 @@
     justify-content: space-between;
     border-radius: 25px;
     margin: 0 auto;
-    width: 50%;
-  }
+    width: 100%;
+}
+
+.column {
+    width: 35vw;
+}
 
 @media only screen and (max-width: 768px) {
     .column {
